--- a/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
+++ b/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
@@ -120,7 +120,7 @@ $(function(){
       //we'll assume that they don't need their work from the old one and remove it.
       if (existingModal.length && existingModal.attr('data-post-id') == postID) {
           existingModal.modal();
-          button.html('<i class="fas fa-pencil-alt"></i>');
+          button.html('<i class="fas fa-fw fa-pencil-alt"></i> Edit');
       } else {
           if (existingModal.length) {
               existingModal.remove();
@@ -141,7 +141,7 @@ $(function(){
                 newEditor.find('.image-clear').click(clearEmbed);
                 createImageGroups(newEditor);
                 editModal[0].postContainer = postContainer[0]; //retrieved to set the new html contents of it upon edit submission
-                button.html('<i class="fas fa-pencil-alt"></i>');
+                button.html('<i class="fas fa-fw fa-pencil-alt"></i> Edit');
                 editModal.modal();
               })
           }
