--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -157,8 +157,8 @@
             </div>
         {{else}}
         <div class="toolbar-button-container dropdown">
-          <button id="post-extra-controls-dropdown" class="button post-toolbar-button dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="text-transform:lowercase;font-variant:small-caps;">
-            More
+          <button id="post-extra-controls-dropdown" class="button post-toolbar-button" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa fa-angle-down"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="post-extra-controls-dropdown">
               <button  type="button" class="dropdown-item edit-post">
