--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -260,7 +260,7 @@
     }
 }
 
-/*dropdowns used in navbar and ALSO in user sidebar to access the flag button*/
+/*dropdowns used in navbar and ALSO in user sidebar to access the flag button and ALSO in post toolbars to access edit and delete */
 .dropdown-menu {
     position: absolute;
     top: 100%;
@@ -283,20 +283,22 @@
 
 .dropdown,
 .dropup {
-    position: relative
+    position: relative;
+    outline:none;
 }
 
 .dropdown-toggle::after {
     display: inline-block;
     width: 0;
     height: 0;
-    margin-left: .255em;
+    margin: .255em;
     vertical-align: .255em;
     content: "";
-    border-top: .3em solid;
-    border-right: .3em solid transparent;
+    border-top: .55em solid;
+    border-right: .5em solid transparent;
     border-bottom: 0;
-    border-left: .3em solid transparent
+    border-left: .5em solid transparent;
+    border-radius: 0.15em;
 }
 
 .dropdown-item {
