--- a/views/partials/scriptPartials/miscInteractivityScripts.handlebars
+++ b/views/partials/scriptPartials/miscInteractivityScripts.handlebars
@@ -1,4 +1,19 @@
 <script type="text/javascript">
+
+{{#eq activePage "home"}}
+var pageLoadTime = new Date().getTime();
+function checkForNewPosts(){
+    $.get("/heyaretherenewposts/"+pageLoadTime).done(function(data,textStatus,jqXHR){
+      if(data=="yeah"){
+        $("#newPostsAvailable").show();
+      }else{
+        window.setTimeout(checkForNewPosts, 60000);
+      }
+    })
+  }
+  window.setTimeout(checkForNewPosts, 60000);
+{{/eq}}
+
 $(function() {
     $(window).scroll(function() {
         var scroll = $(window).scrollTop();
@@ -94,18 +109,6 @@ $(function() {
   // Reload notifications container and check for new posts every minute (hack until we set up WebSockets)
   window.setInterval(function(){
     $("#notificationsContainer").load("/api/notification/display");
-    {{#eq activePage "home"}}
-    $("#checkNewPosts").load("/showposts/home/{{loggedInUserData._id}}/"+((new Date()).getTime()), function(error, result){
-      let latestPost = $("#checkNewPosts").find(".post").attr("data-post-id");
-      let currentlyDisplayedPost = $("#postsContainer").find(".post").attr("data-post-id");
-      if ((latestPost != currentlyDisplayedPost) && latestPost != ""){
-        $("#newPostsAvailable").show();
-      }
-      else {
-        $("#newPostsAvailable").hide();
-      }
-    })
-    {{/eq}}
   }, 60000);
 
   $('body').on('mouseover', '.link-preview-container', function() {
