fix dumb new post check thing

--- a/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
+++ b/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
@@ -14,6 +14,7 @@ function restartInfiniteScroll(timestamp){
     postsContainer.fadeOut(250,function(){
       postsContainer.html("");
       needPostsOlderThan = timestamp;
+      pageLoadTime = timestamp;
       postsContainer.infiniteScroll("destroy");
       postsContainer[0].fadedOut = true;
       startInfiniteScroll();
