hm. idk. looks a bit modern

--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -158,7 +158,7 @@
         {{else}}
         <div class="toolbar-button-container dropdown">
           <button id="post-extra-controls-dropdown" class="button post-toolbar-button" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fa fa-angle-down"></i>
+              <i class="fa fa-bars"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="post-extra-controls-dropdown">
               <button  type="button" class="dropdown-item edit-post">
