Changed up drafts icon bc my first reaction was 'we have a naval mode?'

--- a/views/partials/posteditormodal.handlebars
+++ b/views/partials/posteditormodal.handlebars
@@ -34,7 +34,7 @@
                   <label for="editPostPrivacy-private" id="privatePrivacyLabel"><i class='fas fa-eye-slash'></i></label>
                   {{#if isDraft}} {{! only posts that are already drafts can be edited and then saved as drafts }}
                   <input type="radio" id="editPseudoPrivacy-draft" name="editPostPrivacy" value="draft" checked/>
-                  <label for="editPseudoPrivacy-draft" id="draftLabel"><i class='fas fa-drafting-compass'></i></label>
+                  <label for="editPseudoPrivacy-draft" id="draftLabel"><i class='fas fa-pencil-ruler'></i></label>
                   {{/if}}
                 </div>
               </div>
