--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -57,7 +57,7 @@
                 &nbsp;&middot;&nbsp;
                 <span class="post-visibility">
                     {{#eq this.type "draft"}}
-                    <i class="fas fa-drafting-compass"></i>
+                    <i class="fas fa-pencil-ruler"></i>
                     {{else}}
                     {{#eq this.privacy "public"}}<i class="fas fa-eye"></i>{{else}}<i class="fas fa-eye-slash"></i>{{/eq}}
                     {{/eq}}
