--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -12,7 +12,7 @@
       <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
       <a href="/settings" class="button outline-button full-width-button"><i class="fas fa-cog"></i> Settings</a>
       <a href="/logout" class="button outline-button full-width-button"><i class="fas fa-sign-out-alt"></i> Log out</a>
-      <a href id="switch-to-drafts" class="button outline-button full-width-button"><i class="fas fa-drafting-compass"></i> Drafts</a>      
+      <a href id="switch-to-drafts" class="button outline-button full-width-button"><i class="fas fa-pencil-ruler"></i> Drafts</a>
     </div>
   </div>
 </div>
