--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -26,10 +26,10 @@
 </h3>
 {{#if isOwnProfile}}
   <div id="profileControlsTablet">
-    <button type="button" class="button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal" style="margin-bottom: 0.5rem;"><i class="fas fa-pencil-alt"></i> Edit</button>
-    <a href="/settings" class="button full-width-button" style="margin-bottom: 0.5rem;"><i class="fas fa-cog"></i> Settings</a>
-    <a href="/logout" class="button full-width-button" style="margin-bottom: 0.5rem;"><i class="fas fa-sign-out-alt"></i> Log out</a>
-    <a href id="switch-to-drafts" class="button outline-button full-width-button"><i class="fas fa-drafting-compass"></i> Drafts</a>      
+    <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal" style="margin-bottom: 0.5rem;"><i class="fas fa-pencil-alt"></i> Edit</button>
+    <a href="/settings" class="button outline-button full-width-button" style="margin-bottom: 0.5rem;"><i class="fas fa-cog"></i> Settings</a>
+    <a href="/logout" class="button outline-button full-width-button" style="margin-bottom: 0.5rem;"><i class="fas fa-sign-out-alt"></i> Log out</a>
+    <a href id="switch-to-drafts" class="button outline-button full-width-button"><i class="fas fa-pencil-ruler"></i> Drafts</a>
   </div>
 {{/if}}
 {{#unless isOwnProfile}}
