--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -8,7 +8,7 @@
 {{#if isOwnProfile}}
   </div>
   <div class="col-6 d-flex align-items-start">
-    <div id="profileControlsDesktopMobile">
+    <div id="profileControlsDesktopMobile" class="button-group">
       <a href="#" id="switch-to-drafts" class="button outline-button full-width-button"><i class="fas fa-pencil-ruler"></i> See drafts</a>
       <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-user-circle"></i> Edit profile</button>
       <a href="/settings" class="button outline-button full-width-button"><i class="fas fa-cog"></i> Settings</a>
