--- a/scss/_logged-out.scss
+++ b/scss/_logged-out.scss
@@ -1,10 +1,10 @@
 // Colors
-$bg-color: $background-white;
-$dot-color: #eeeeee;
+$bg-color: lighten($background-grey, 1%);
+$dot-color: $light-grey;
 
 // Dimensions
 $dot-size: 2px;
-$dot-space: 22px;
+$dot-space: 12px;
 
 .logged-out-body {
     background: linear-gradient(90deg, $bg-color ($dot-space - $dot-size), transparent 1%) center,
