--- a/views/partials/scriptPartials/miscInteractivityScripts.handlebars
+++ b/views/partials/scriptPartials/miscInteractivityScripts.handlebars
@@ -1,5 +1,26 @@
 <script type="text/javascript">
 
+//bootstrap doesn't officially support multiple modals open at once, so if an alert modal comes up over our editor modal we have to sneakily keep it from resetting
+//the body when it's dismissed and make the backdrops not collide with each other
+var oldAlert = bootbox.alert;
+bootbox.alert = function(alertString) {
+    var editModal = $("#editPostModal");
+    oldAlert(alertString);
+    if (editModal) {
+        var body = $("body");
+        var obvs = new MutationObserver(function(e) {
+            body.addClass("modal-open");
+            obvs.disconnect();
+            obvs = undefined;
+        })
+        obvs.observe(body[0], {
+            attributes: true,
+            attributeFilter: ['class']
+        })
+        $($(".modal-backdrop")[1]).css('z-index', 1050); //so the second modal backdrop will be in front of the edit post modal, which has a z-index of 1040 (in css) but behind the bootbox-alert modal, which is at z-index: 1060
+    }
+}
+
 {{#eq activePage "home"}}
 var pageLoadTime = new Date().getTime();
 function checkForNewPosts(){
@@ -35,7 +56,6 @@ $(function() {
 
             if((bottom_of_screen > top_of_element) && (top_of_screen < bottom_of_element)){
                 element.addClass('flash')
-                console.log("Flash dat comment")
             }
         });
     });
@@ -123,7 +143,6 @@ $(function() {
     commentsContainer.slideToggle("fast", function(){
       commentsContainer.find('.comment').each(function(i,e) {
           e = $(e);
-          console.log(e.height());
           showMoreAndImageLightboxing(e);
       })
       if (commentsContainer.is(':visible')){
@@ -189,7 +208,6 @@ $(function() {
     var images = $this.closest(".post").find(".content-warning-images");
     var state = $this.attr("data-state");
     var abbrContent = $this.closest(".post").find(".abbreviated-content");
-    console.log(abbrContent)
     if (state == "contracted") {
       abbrContent.css('height','100%')
       images.toggleClass("content-warning-images-shown");
@@ -233,8 +251,6 @@ $(function() {
             divToDelete.find('footer button.delete-comment:first').remove();
 
             let newCommentCount = data.numberOfComments;
-            console.log(element)
-            console.log(counterToChange)
             if(newCommentCount!=0){
               counterToChange.html(newCommentCount)
             }else{
