fix relatively simple misc. problems

--- a/scss/_posts-comments.scss
+++ b/scss/_posts-comments.scss
@@ -610,6 +610,7 @@ div.link-preview-image {
     height: 0;
     overflow: hidden;
     max-width: 100%;
+    margin-bottom: 0.5rem;
 }
 
 .embedded-video {
