--- a/views/partials/scriptPartials/linkPreviewPreview.handlebars
+++ b/views/partials/scriptPartials/linkPreviewPreview.handlebars
@@ -13,7 +13,7 @@
     <div class="link-preview-text-container" style="width:100%;">
         <span class="link-preview-title">{{#if editing}}{{title}}{{else}}...loading...{{/if}}</span>
         <span class="link-preview-description">{{#if editing}}{{description}}{{else}}...loading...{{/if}}</span>
-        <span class="link-preview-domain">{{#if editing}}{{domain}}{{else}}...loading...{{/if}}</span>
+        <span class="link-preview-domain">{{#if editing}}{{domain}}{{#if isEmbeddableVideo}} (will open as embed){{/if}}{{else}}...loading...{{/if}}</span>
     </div>
     <div class="image-preview-controls">
         <div class="image-control image-clear" title="Clear"><i class="fas fa-times"></i></div>
