--- a/views/partials/posteditormodal.handlebars
+++ b/views/partials/posteditormodal.handlebars
@@ -42,7 +42,7 @@
               <div class="rightSideControls">
                 <button type="button" class="button grey-button" id="postLinkButton"><i class="fas fa-link"></i></button>
                 <button type="button" class="button grey-button" id="postImageButton"><i class="fas fa-image"></i></button>
-                <button type="button" class="button grey-button" id="emojiWindowButton"><i class="far fa-smile"></i></button>
+                <button type="button" class="button grey-button show-emoji-picker"><i class="far fa-smile"></i></button>
                 <button type="button" class="button grey-button" id="postContentWarningsButton"><i class="fas fa-info-circle"></i></button>
               </div>
             </div>
